--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,10 +57,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    #这里一定要在 images 后面加上/ 否则会出现：No file or variants found for asset: assets/images.错误
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
