--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   uuid: ^4.5.1
   intl: ^0.20.2
   shared_preferences: ^2.5.3
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
