--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   intl: ^0.20.2
   shared_preferences: ^2.5.3
   sqflite: ^2.4.2
+  dio: ^5.8.0
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
