--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   sqflite: ^2.4.2
   dio: ^5.8.0
   webview_flutter: ^4.13.0
+  easy_refresh: ^3.4.0
 
 dev_dependencies:
   flutter_test:
